# SapphireMachine

./: .gitignore  .gitmodules  README.md
assets/: config.toml  scene.json  scene2.json  scene_spec.json  test.json
assets/rooms/: 111.json
mac/: CMakeLists.txt  Makefile  Readme.txt
msvc/: SapphireApp.sln  SapphireApp.vcxproj  SapphireApp.vcxproj.filters  resource.h
src/: Audio.cpp  Audio.h  Cursor.cpp  Cursor.h  GUI.cpp  GUI.h  Loader.cpp  Loader.h  Movie.cpp  Movie.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Utils.cpp  Utils.h  globals.h  main.cpp
switch/: Makefile  available packages switch.txt  compile.bat  run.bat  send.bat
